# scip-lsp

./: .bazelrc  .envrc  .gitignore  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  NOTICE  README.md  go.mod  go.sum  requirements.txt
bsp_server/bazel/: BUILD.bazel  execute_query.py
bsp_server/bazel/test/: test_execute_query.py
bsp_server/scip_sync_util/: BUILD.bazel  incremental.py  mnemonics.py  scip_const.py  scip_sync.py  scip_utils.py  workspace.py
bsp_server/scip_sync_util/test/: test_incremental.py  test_scip_sync.py  test_scip_utils.py  test_workspace.py
idl/mock/: BUILD.bazel
idl/ulsp/model/: BUILD.bazel  types.proto
idl/ulsp/service/: BUILD.bazel  ulsp_daemon.proto
src/scip-lib/mapper/: BUILD.bazel  scip_lsp.go  scip_lsp_test.go  scip_types.go  scip_types_test.go
src/scip-lib/model/: BUILD.bazel  scip.go  scip_test.go
src/scip-lib/partialloader/: BUILD.bazel  index.go  index_test.go  prefixtree.go  prefixtree_test.go
src/scip-lib/registry/: BUILD.bazel  partial_registry.go  partial_registry_test.go  types.go
src/scip-lib/scanner/: BUILD.bazel  bufferpool.go  bufferpool_test.go  document_test.go  scan.go  scan_test.go  scan_util_test.go
src/scip-lib/scanner/testdata/: valid_index.scip
src/scip-lib/utils/: BUILD.bazel  utils.go
src/ulsp/: BUILD.bazel  CONTRIBUTING.md  README.md  main.go  main_test.go
src/ulsp/app/: BUILD.bazel  app.go  decorators.go  decorators_test.go
src/ulsp/app/testdata/config/: BUILD.bazel  base.yaml
src/ulsp/config/: BUILD.bazel  base.yaml  development.yaml  local.yaml  meta.yaml
src/ulsp/controller/: BUILD.bazel  module.go
src/ulsp/controller/diagnostics/: BUILD.bazel  diagnostics.go  diagnostics_test.go
src/ulsp/controller/doc-sync/: BUILD.bazel  doc_sync.go  doc_sync_test.go  position_mapper.go  position_mapper_test.go
src/ulsp/controller/indexer/: BUILD.bazel  indexer.go  indexer_test.go  java_indexer.go  java_indexer_test.go  pending_cmd_store.go  pending_cmd_store_test.go
src/ulsp/controller/jdk/: BUILD.bazel  jdk.go  jdk_test.go
src/ulsp/controller/jdk/types/: BUILD.bazel  types.go
src/ulsp/controller/quick-actions/: BUILD.bazel  pending_action_runs.go  pending_action_runs_test.go  quick_actions.go  quick_actions_test.go  range_store.go  range_store_test.go
src/ulsp/controller/quick-actions/action/: BUILD.bazel  action.go
src/ulsp/controller/quick-actions/actions-java/: BUILD.bazel  action_java_build.go  action_java_build_test.go  action_java_sync.go  action_java_sync_test.go  action_java_test_coverage.go  action_java_test_coverage_test.go  action_java_test_explorer.go  action_java_test_explorer_info.go  action_java_test_explorer_info_test.go  action_java_test_explorer_test.go  action_java_test_run.go  action_java_test_run_test.go
src/ulsp/controller/scala-assist/: BUILD.bazel  scala_assist.go  scala_assist_test.go
src/ulsp/controller/scip/: BUILD.bazel  consume.go  consume_test.go  partial_registry.go  partial_registry_test.go  scip.go  scip_notify.go  scip_notify_test.go  scip_test.go  types.go  types_test.go
src/ulsp/controller/ulsp-daemon/: BUILD.bazel  methods_code_intel.go  methods_code_intel_test.go  methods_document.go  methods_document_test.go  methods_lifecycle.go  methods_lifecycle_test.go  methods_window.go  methods_window_test.go  methods_workspace.go  methods_workspace_test.go  ulsp_daemon.go  ulsp_daemon_test.go
src/ulsp/controller/user-guidance/: BUILD.bazel  user_guidance.go  user_guidance_test.go
src/ulsp/entity/: BUILD.bazel  ulsp_daemon.go  ulsp_daemon_test.go
src/ulsp/entity/ulsp-plugin/: BUILD.bazel  ulsp_plugin.go  ulsp_plugin_test.go
src/ulsp/factory/: BUILD.bazel  factory.go  lsp.go
src/ulsp/gateway/: BUILD.bazel  module.go  module_test.go
src/ulsp/gateway/ide-client/: BUILD.bazel  ide_client.go  ide_client_test.go
src/ulsp/handler/: BUILD.bazel  module.go  module_test.go  server_info.go  server_info_test.go
src/ulsp/handler/jdk/: BUILD.bazel  jdk.go  jdk_test.go
src/ulsp/handler/ulsp-daemon/: BUILD.bazel  methods_code_intel.go  methods_code_intel_test.go  methods_document.go  methods_document_test.go  methods_lifecycle.go  methods_lifecycle_test.go  methods_window.go  methods_window_test.go  methods_workspace.go  methods_workspace_test.go  router.go  router_test.go  ulsp_daemon.go  ulsp_daemon_test.go
src/ulsp/internal/bazelproject/: BUILD.bazel  project.go  project_test.go  project_view.go  project_view_test.go
src/ulsp/internal/clock/: BUILD.bazel  clock.go  clock_test.go
src/ulsp/internal/core/: BUILD.bazel  config.go  config_test.go  logger.go  logger_test.go
src/ulsp/internal/errors/: BUILD.bazel  document.go  document_test.go  errors.go  errors_test.go  not_found.go  not_found_test.go
src/ulsp/internal/executor/: BUILD.bazel  executor.go  executor_test.go
src/ulsp/internal/fs/: BUILD.bazel  fs.go  fs_test.go
src/ulsp/internal/java-utils/: BUILD.bazel  utils.go  utils_test.go
src/ulsp/internal/jsonrpcfx/: BUILD.bazel  json_rpc.go  json_rpc_test.go
src/ulsp/internal/logfilewriter/: BUILD.bazel  output_writer.go  output_writer_test.go
src/ulsp/internal/persistent-notifier/: BUILD.bazel  manager.go  manager_test.go  notifier.go  notifier_test.go
src/ulsp/internal/protocol/: BUILD.bazel  README.md  mapper.go  mapper_test.go
src/ulsp/internal/serverinfofile/: BUILD.bazel  server_info_file.go  server_info_file_test.go
src/ulsp/internal/workspace-utils/: BUILD.bazel  utils.go  utils_test.go
src/ulsp/mapper/: BUILD.bazel  document.go  document_test.go  errors.go  errors_test.go  jdk.go  jdk_test.go  lsp.go  lsp_lifecycle.go  lsp_lifecycle_test.go  lsp_test.go  ulsp_daemon.go  ulsp_daemon_test.go  ulsp_plugin.go  ulsp_plugin_test.go
src/ulsp/mapper/idl/: BUILD.bazel  errors.go  errors_test.go  jdk.go  jdk_test.go
src/ulsp/model/: BUILD.bazel  ulsp_daemon.go  ulsp_daemon_test.go
src/ulsp/repository/session/: BUILD.bazel  session.go  session_test.go
tools/: BUILD.bazel  black_check.py  black_fix.py  generate_scip_index.sh  goimports.sh  goimports_check.sh  goimports_fix.sh
(+64 files in other folders)
