load("@gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/uber/scip-lsp
# gazelle:proto disable_global
# gazelle:exclude **/*mock*.go
# gazelle:go_naming_convention go_default_library
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
    ],
    command = "update-repos",
)
