load("@rules_python//python:defs.bzl", "py_binary")
load("@scip_lsp_pip_deps//:requirements.bzl", "requirement")

# Go formatting and linting
sh_binary(
    name = "goimports",
    srcs = ["goimports.sh"],
    data = ["@rules_go//go"],
    visibility = ["//visibility:public"],
)

# Python formatting and linting
py_binary(
    name = "black_check",
    srcs = ["black_check.py"],
    visibility = ["//visibility:public"],
    deps = [requirement("black")],
)

py_binary(
    name = "black_fix",
    srcs = ["black_fix.py"],
    visibility = ["//visibility:public"],
    deps = [requirement("black")],
)
