load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")
load(":version.bzl", "version")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/uber/scip-lsp/src/ulsp",
    visibility = ["//visibility:private"],
    deps = [
        "//src/ulsp/app:go_default_library",
        "@org_uber_go_fx//:go_default_library",
    ],
)

go_binary(
    name = "ulsp-daemon",
    data = ["//src/ulsp/config"],
    embed = [":go_default_library"],
    visibility = [":__subpackages__"],
    x_defs = {"github.com/uber/scip-lsp/src/ulsp/._version": version},
)

go_test(
    name = "go_default_test",
    srcs = ["main_test.go"],
    data = ["//src/ulsp/config"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
    ],
)
