# gazelle:exclude dummy.go

load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "modelpb_proto",
    srcs = ["types.proto"],
    strip_import_prefix = "/idl",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "modelpb_go_proto",
    compilers = ["@rules_go//proto:gogoslick_proto"],
    importpath = "github.com/uber/scip-lsp/idl/ulsp/model",
    proto = ":modelpb_proto",
    visibility = ["//visibility:public"],
)
