# gazelle:exclude dummy.go

load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "servicepb_proto",
    srcs = ["ulsp_daemon.proto"],
    strip_import_prefix = "/idl",
    visibility = ["//visibility:public"],
    deps = ["//idl/ulsp/model:modelpb_proto"],
)

go_proto_library(
    name = "servicepb_go_proto",
    compilers = [
        "@rules_go//proto:gogoslick_grpc",
    ],
    importpath = "github.com/uber/scip-lsp/idl/ulsp/service",
    proto = ":servicepb_proto",
    visibility = ["//visibility:public"],
    deps = ["//idl/ulsp/model:modelpb_go_proto"],
)
