load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["utils.go"],
    importpath = "github.com/uber/scip-lsp/src/scip-lib/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//src/scip-lib/model:go_default_library",
        "@com_github_sourcegraph_scip//bindings/go/scip:go_default_library",
        "@dev_lsp_go_protocol//:go_default_library",
    ],
)
