load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["module.go"],
    importpath = "github.com/uber/scip-lsp/src/ulsp/gateway",
    visibility = ["//src/ulsp:__subpackages__"],
    deps = ["@org_uber_go_fx//:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["module_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@com_github_stretchr_testify//assert:go_default_library",
        "@org_uber_go_fx//:go_default_library",
        "@org_uber_go_goleak//:go_default_library",
    ],
)
